--- a/.air.toml
+++ b/.air.toml
@@ -20,7 +20,7 @@ exclude_dir = ["assets", "tmp", "vendor", "frontend/node_modules"]
 # Watch these directories if you specified.
 include_dir = []
 # Exclude files.
-exclude_file = []
+exclude_file = ["logs"]
 # This log file places in your tmp_dir.
 log = "./tmp/air.log"
 # It's not necessary to trigger build each time file changes if it's too frequent.
